white corner in scrollbar fix
t

--- a/src/containers/applications/apps/assets/taskmanager.scss
+++ b/src/containers/applications/apps/assets/taskmanager.scss
@@ -72,6 +72,10 @@
     flex-direction: column;
     height: 100%;
     overflow: scroll;
+
+    &::-webkit-scrollbar-corner {
+      background: rgba(0, 0, 0, 0);
+    }
   }
 
   nav.open ~ main {
